[package]
name = "nl80211"
version = "0.0.2"
authors = ["eonm <eon.mathis@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Send commands to nl80211 and receive messages"
homepage = "https://github.com/Eonm/nl80211"
repository = "https://github.com/Eonm/nl80211"

[dependencies]
neli = "0.6.0"
neli-proc-macros = "0.1.0"
