[package]
name = "neli-wifi"
version = "0.4.1"
authors = ["eonm <eon.mathis@gmail.com>", "Max Verevkin <maxxverrr@gmail.com>"]
edition = "2021"
description = "Communicate with nl80211"
repository = "https://github.com/MaxVerevkin/neli-wifi"
license = "MIT"
keywords = ["wifi", "neli", "netlink", "nl80211"]

[features]
default = []
async = ["neli/async"]

[dependencies]
neli = "0.6.0"
neli-proc-macros = "0.1.0"

[dev-dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[package.metadata.docs.rs]
all-features = true
